# OpenMP-Open-MPI-parallel

./: README.md
Open MPI/: main.cpp
Open MPI/Coding/: FanoCoding.cpp  FanoCoding.h  RLECoding.cpp  RLECoding.h
Open MPI/File Generation/: FileGenerator.cpp  FileGenerator.h
Open MPI/Misc/: misc.cpp  misc.h
OpenMP/: CMakeLists.txt  main.cpp
OpenMP/Coding/: FanoCoding.cpp  FanoCoding.h  RLECoding.cpp  RLECoding.h
OpenMP/File Generation/: FileGenerator.cpp  FileGenerator.h
OpenMP/Misc/: alphabet.h  misc.cpp  misc.h
